force-app/main/default/objects/SalesRevenue__c/SalesRevenue__c.object-meta.xml
<CustomObject>
    <label>销售业绩</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>销售业绩编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>