force-app/main/default/objects/SalesRevenue__c/fields/CCECActualAmount__c.field-meta.xml
<CustomField>
    <fullName>CCECActualAmount__c</fullName>
    <label>CCEC完成金额</label>
    <summarizedField>SalesRevenueDetailsLines__c.CCECActualAmount__c</summarizedField>
    <summaryForeignKey>SalesRevenueDetailsLines__c.SalesRevenue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>