force-app/main/default/objects/SalesRevenue__c/fields/CCECTargetAmount__c.field-meta.xml
<CustomField>
    <fullName>CCECTargetAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CCEC目标金额</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>