force-app/main/default/objects/SalesRevenue__c/fields/ChanelPartner__c.field-meta.xml
<CustomField>
    <fullName>ChanelPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>经销商</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>销售业绩</relationshipLabel>
    <relationshipName>SalesRevenueYeeg</relationshipName>
    <type>Lookup</type>
</CustomField>