force-app/main/default/objects/SalesRevenue__c/fields/DCECActualQty__c.field-meta.xml
<CustomField>
    <fullName>DCECActualQty__c</fullName>
    <label>DCEC完成台数</label>
    <summarizedField>SalesRevenueDetailsLines__c.DCECActualQty__c</summarizedField>
    <summaryForeignKey>SalesRevenueDetailsLines__c.SalesRevenue__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>