force-app/main/default/objects/SalesRevenue__c/fields/DCECTargetQty__c.field-meta.xml
<CustomField>
    <fullName>DCECTargetQty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DCEC目标台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>