force-app/main/default/objects/SalesRevenue__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>年份</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2019</fullName>
                <default>true</default>
                <label>2019</label>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>